Fixed click, update, fade etc not working with gradient.  Also swapped path with composedPath() so it works on firefox.

--- a/js/css.css
+++ b/js/css.css
@@ -50,10 +50,6 @@ body {
   .tube .ball {
       margin-bottom: 10px;
   }
-
-  .ballbg {
-    /* opacity: 50%; */
-  }
       
   button {
     max-width: 200;
@@ -65,6 +61,7 @@ body {
     font-weight: 700;
     font-size:100%;
   }
+
     /* solver */
   
     #display {
